# github-actions-sandbox

./: CHANGELOG.md  cliff.toml  pyproject.toml  trigger_merge.txt
.github/workflows/: release.yml  test-all.yml  test-pr-merge.yml  test-push.yml
src/: my_ipaddress.py
src/pkg/: __init__.py  __version__.py  my_ipaddress.py
tests/: test_my_ipaddress.py
