[project]
name = "github-actions-sandbox"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "requests~=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.envs.default]
extra-dependencies = [
    "pytest~=7.4.4",
    "pytest-cov~=4.1.0"
]
