[project]
name = "github-actions-sandbox"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "requests~=2.31.0",
]

[build-system]
requires = [
    "hatchling",
    "hatch-semver",
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pkg/__init__.py"
validate-bump = true
scheme = "semver"

[tool.hatch.build.targets.wheel]
packages = ["src/pkg"]
only-packages = true

[tool.hatch.build.targets.sdist]
only-include = ["src/pkg"]

[tool.hatch.envs.default]
extra-dependencies = [
    "pytest~=7.4.4",
    "pytest-cov~=4.1.0"
]

[tool.hatch.envs.default.scripts]
release = """git checkout main && git pull && \
             git fetch --tags --force && \   
             hatch version {args:.} && \
             git cliff --tag $(hatch version) -o CHANGELOG.md && \
             git checkout -b release/v$(hatch version) && \
             git add src/pkg/__init__.py CHANGELOG.md && \
             git commit -m "chore(release): v$(hatch version)" && \
             git push"""
